syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    Op op = 1;
    string key = 2;
    string value = 3;
    string cid = 4;
    uint64 seq_num = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    string cid = 2;
    uint64 seq_num = 3;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}
